Fix missing margin

--- a/web/app/home.styles.module.scss
+++ b/web/app/home.styles.module.scss
@@ -229,6 +229,7 @@
         .previouslyHeading {
             margin: 0px;
             gap: 1rem;
+            margin-bottom: 2rem;
         }
     }
 
